src/ui/layout/overlay/snapshots/kvn_tui__ui__layout__overlay__onboarding__tests__draw_every_onboarding_card_snapshot@profiles.snap
---
source: src/ui/layout/overlay/onboarding.rs
expression: "snapshot_terminal(&model, APP_WINDOW_COLS, APP_WINDOW_ROWS)"
---
┌ Traffic ──────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections                                          │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Profiles ─────────────────────────────────────────────┐┌ Logs ────────────────────────────────────────────────┐
│ No sources. Press p to paste a profile or subscription││                                                      │
│URL from clipboard.                                    ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                           ┌──────────────────────────────────────────────────────┐                            │
│                           │                Getting started · 4/10                │                            │
│                           │                                                      │                            │
│                           │                Add your first profile                │                            │
│                           │                                                      │                            │
│                           │ Copy a VPN share link or subscription URL, then      │                            │
│                           │ press p to add it to kvn.                            │                            │
│                           │                                                      │                            │
│                           │ Open the profile list, select a profile, and press   │                            │
│                           │ Enter to connect.                                    │                            │
│                           │                                                      │                            │
│                           │          󰌑 open profile list · p add profile         │                            │
│                           └──────────────────────────────────────────────────────┘                            │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
└───────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
 DISCONNECTED                                                                        DoH  Global    (off) never 
[113x35]
