src/ui/layout/overlay/snapshots/kvn_tui__ui__layout__overlay__onboarding__tests__draw_every_onboarding_card_snapshot@routing.snap
---
source: src/ui/layout/overlay/onboarding.rs
expression: "snapshot_terminal(&model, APP_WINDOW_COLS, APP_WINDOW_ROWS)"
---
┌ Traffic ──────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections                                          │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Profiles ─────────────────────────────────────────────┐┌ Logs ────────────────────────────────────────────────┐
│ No sources. Press p to paste a profile or subscription││                                                      │
│URL from clipboard.                                    ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                           ┌──────────────────────────────────────────────────────┐                            │
│                           │                Getting started · 3/10                │                            │
│                           │                                                      │                            │
│                           │                 Choose a routing mode                │                            │
│                           │                                                      │                            │
│                           │ Global routes all traffic through the VPN.           │                            │
│                           │                                                      │                            │
│                           │ Bypass RU keeps RU traffic outside the VPN, while    │                            │
│                           │ Only RU routes only RU traffic through it.           │                            │
│                           │                                                      │                            │
│                           │                    󰌑 choose a mode                   │                            │
│                           └──────────────────────────────────────────────────────┘                            │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
└───────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
 DISCONNECTED                                                                        DoH  Global    (off) never 
[113x35]
